--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
   
   <body>
    <input type="text" id="url" placeholder="faq url" value="https://experience.imiconnect.io/faqs/">
-  <button id="send">send</button>
+  <button id="send">sendsadad</button>
 
   <div id="status"></div>
    <script src="main.js" type="text/javascript"></script>
